Added portuguese translation Labels can now be counted as boxes Notification displays total number of unread messages Added dummy notification when there are no new emails Message subject is now displayed (by default) when there is only one new email Gmail search query can now be edited Login username and password are now encoded Passwords aren't echoed via kdDebug anymore Added option to open Gmail in simple interface when launching browser Improved DCOP interface Removed snooze menu option gmail-mail-snippet notification now also shows attachments Icon can now be hidden/shown via DCOP Updated docbook

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,18 +2,11 @@ INCLUDES = $(all_includes)
 
 bin_PROGRAMS = kcheckgmail
 
-kcheckgmail_SOURCES = main.cpp \
-	kcheckgmailapp.cpp \
-	kcheckgmailtray.cpp \
-	gmail.cpp \
-	gmailparser.cpp \
-	gmailwalletmanager.cpp \
-	prefs.kcfgc \
-	netsettingswidget.ui \
-	loginsettingswidget.ui \
-	appletsettingswidget.ui \
-	kcheckgmailiface.skel
-kcheckgmail_LDFLAGS = -module $(KDE_PLUGIN) $(all_libraries) 
+kcheckgmail_SOURCES = advancedsettingswidget.ui appletsettingswidget.ui \
+	gmail.cpp gmailparser.cpp gmailwalletmanager.cpp kcheckgmailapp.cpp \
+	kcheckgmailiface.skel kcheckgmailtray.cpp loginsettingswidget.ui main.cpp \
+	netsettingswidget.ui prefs.kcfgc
+kcheckgmail_LDFLAGS = $(KDE_PLUGIN) $(all_libraries)
 kcheckgmail_LDADD = $(LIB_KDEUI) $(LIB_KIO) -lkwalletclient
 
 METASOURCES = AUTO
@@ -28,7 +21,8 @@ noinst_HEADERS = gmail.h \
 	netsettingswidget.h \
 	prefs.h \
 	gmail_constants.h \
-	appletsettingswidget.h
+	appletsettingswidget.h \
+	advancedsettingswidget.h
 
 xdg_apps_DATA = kcheckgmail.desktop
 
