--- a/src/kcheckgmail.desktop
+++ b/src/kcheckgmail.desktop
@@ -2,6 +2,7 @@
 Encoding=UTF-8
 Name=KCheckGMail
 Name[tr]=KCheckGMail
+Name[pt]=KCheckGMail
 Name[pl]=KCheckGMail
 Name[lt]=KCheckGMail
 Name[it]=KCheckGMail
@@ -9,12 +10,14 @@ Name[es]=KCheckGMail
 Name[xx]=xxKCheckGMailxx
 GenericName=New email notifier
 GenericName[tr]=Yeni E-posta Bildiricisi
+GenericName[pt]=Notificador de nova mensagem
 GenericName[pl]=Powiadomienia o nowej poczcie
 GenericName[lt]=Naujo el. pašto pranešiklis
 GenericName[it]=Notificatore di nuove email
 GenericName[es]=Notificador de correo nuevo
 Comment=A Kicker applet to display how many email messages you have in your Gmail account.
 Comment[tr]=Gmail hesabınızda kaç tane yeni e-posta olduğunu gösteren bir panel programcığıdır.
+Comment[pt]=Uma 'applet' que inicia uma aplicação que mostra quantas mensagens não lidas tem na sua conta Gmail.
 Comment[pl]=Aplet panelu do pokazywania zawartości Twojej skrzynki pocztowej Gmail
 Comment[it]=Un'applet di Kicker per visualizzare quanti messaggi di posta elettronica sono presenti nel tuo account di Gmail.
 Comment[es]=Mini aplicación que muestra el número de mensajes sin leer en una cuenta de Gmail.
